--- a/style.css
+++ b/style.css
@@ -50,14 +50,14 @@ header {
     /* height: 80vh; */
 }
 
-#container1 {
+#container1, #container5 {
     display: flex;
     /* height: 80vh; */
-    width: 100vw;
+    /* width: 100vw; */
     padding-left: 40px;
 }
 
-#left1 {
+.left1 {
     /* min-width: 60%; */
     width: 60vw;
 }
@@ -97,13 +97,13 @@ header {
     margin: 0px;
 }
 
-#right1 {
+.right1 {
     padding-top: 15px;
     /* min-width: 45%; */
     width: 40vw;;
 }
 
-#graphic {
+#first_graphic {
     width: 600px;
     margin-top: -100px;
     margin-left: -100px;
@@ -240,6 +240,61 @@ header {
 .iconprice {
     padding: 0px;
     min-width: 90px;
+}
+
+#second_graphic {
+    height: 500px;
+    margin-top: 150px;
+    margin-left: -30px;
+}
+
+#title3 {
+    max-width: 52vw;
+    /* border-top: 3px solid var(--cardbackground); */
+}
+
+#container5 {
+    margin-top: 40px;
+    border-top: 3px solid var(--cardbackground);
+    border-bottom: 3px solid var(--cardbackground);
+}
+
+#second_button {
+    margin-bottom: 0px;
+}
+
+footer {
+    margin-top: 40px;
+    margin-left: 40px;
+    margin-right: 40px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--smalltext);
+    font-size: 24px;
+}
+
+.copyright {
+    color: var(--navtextcolor);
+}
+
+.social i {
+    margin-right: 15px;
+    margin-top: 10px;
+    color: var(--navtextcolor);
+    transform: scale(1.3);
+}
+
+table {
+    margin-top: 50px;
+    margin-bottom: 50px;
+    width: 90%;
+}
+
+th {
+    padding-bottom: 20px;
+    padding-top: 20px;
+    color: var(--smalltext);
+    text-align: left;
+    font-weight: bold;
 }
 
 
