--- a/style.css
+++ b/style.css
@@ -8,84 +8,82 @@
     --cardseries: #fe8039;
 } 
 
-header {
-    width: 100vw;
+header, footer {
+    padding-left: 8vw;
+    padding-right: 8vw;
 }
 
-/* div {
-    border: 1px solid black;
-} */
+header {
+    margin-top: 50px;
+}
 
-/* This applies from 0px to 640px */
+footer {
+    margin-top: 100px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: var(--smalltext);
+    font-size: 26px;
+}
 
-#navigation {
-    display: flex;
+section {
+    margin-top: 80px;
+}
+
+nav {
+    display:  flex;
     justify-content: space-between;
-    padding-left: 5vw;
-    padding-right: 5vw;
-    height: 20vh;
-    align-items: center;
+    align-content: center;
+}
+
+
+.container {
+    padding-left: 8vw;
+    padding-right: 8vw;
+    display: flex;
 }
 
 #menu {
-    display: none;
+    display:  none;
 }
 
-#leftnav {
+#align_hamburger {
     display: flex;
-    justify-content: flex-start;
-    align-items: center;   
+    align-content: center;
+}
+
+#hamburger {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 #hamburger .line {
         width: 35px;
-        height: 5px;
+        height: 6px;
         background-color: var(--navtextcolor);
-        margin: 6px 0;
+        margin: 3px 0;
         border-radius: 10px;
 }
 
-#section1 {
-    width: 100vw;
-    /* height: 80vh; */
+.logo {
+    width: 260px;
 }
-
-#container1, #container5 {
-    display: flex;
-    /* height: 80vh; */
-    /* width: 100vw; */
-    padding-left: 40px;
-}
-
-.left1 {
-    /* min-width: 60%; */
-    width: 60vw;
-}
-
-/* #left1:not(.button) > * {
-    padding-left: 40px;;
-} */
 
 .pink {
     color: var(--pink);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
     letter-spacing: 0.1rem;
-    font-size: 1.1rem;
-    margin-top: 40px;
+    font-size: 1.4rem;
 }
 
-.title1, .title2 {
+.title {
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 4.4rem;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    min-width: 65vw;
-}
-
-.title1 {
-    margin-top: 50px;
+    margin-top: 40px;
+    margin-bottom: 30px;
+    width: 400px;
+    line-height: 100%;
 }
 
 .smalltext {
@@ -95,18 +93,7 @@ header {
     letter-spacing: 0.15rem;
     padding-top: 20px;
     margin: 0px;
-}
-
-.right1 {
-    padding-top: 15px;
-    /* min-width: 45%; */
-    width: 40vw;;
-}
-
-#first_graphic {
-    width: 600px;
-    margin-top: -100px;
-    margin-left: -100px;
+    line-height: 150%;
 }
 
 .button {
@@ -117,13 +104,34 @@ header {
     font-size: 1.5rem;
     background-color: white;
     border: 5px solid transparent;
-    margin-top: 40px;
-    margin-bottom: 120px;
+    margin-top: 50px;
     border-radius: 50px;
     background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, var(--gradientstart), var(--gradientend));
     background-origin: border-box;
     box-shadow: 2px 1000px 1px #fff inset;
-    /* margin-left: 40px; */
+}
+
+#first_graphic {
+    width: 540px;
+    margin-top: -90px;
+    margin-left: -140px;
+}
+
+.background_container {
+    display: flex;
+    flex-direction: column;
+    align-content: flex-end;
+    justify-content: flex-end;
+    background-image: url(assets/background.svg);
+    background-position: 20% 100%; 
+    background-size: cover;
+    background-repeat: no-repeat; 
+    padding-left: 8vw;
+    padding-right: 8vw;
+    justify-content: flex-end;
+    height: 420px;
+    padding-bottom: 30px;
+    margin-top: 110px;
 }
 
 .bigtext {
@@ -131,38 +139,38 @@ header {
     font-size: 3.5rem;
     margin: 0;
     padding-top: 0px;
+    line-height: 120%;
 }
 
-.smalltext2 {
-    font-family: Arial, Helvetica, sans-serif;
+.black {
     color: black;
-    font-size: 1.6rem;
-    letter-spacing: 0.15rem;
-    padding-top: 20px;
 }
 
-#container2 {
-    display: flex;
-    flex-direction: column;
-    align-content: flex-end;
-    justify-content: flex-end;
-    background-image: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 0)), linear-gradient(101deg, var(--gradientstart), var(--gradientend));
-    /* background-image: url(assets/background.svg);
-    background-size: cover;
-    background-repeat: no-repeat; */
-    padding-left: 40px;
-    padding-right: 70px;
-    justify-content: flex-end;
-    height: 45vh;
-    padding-bottom: 30px;
+.hidden {
+    display: none;
 }
 
-#container3 {
+.companyset {
     display: flex;
     flex-wrap: wrap;
-    padding-left: 40px;
-    margin-top: 50px;
-    margin-bottom: 40px;
+    justify-content: space-between;
+    margin-top: 90px;
+}
+
+.company {
+    width: 40%;
+    margin-bottom: 30px;
+}
+
+.cutimg {
+    object-fit: cover; 
+    object-position: 0 0;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    margin-top: 55px;
 }
 
 .link {
@@ -173,7 +181,8 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin-top: 40px;
+    margin-top: 50px;
+    /*min-height: 550px;*/
 }
 
 .card {
@@ -181,27 +190,14 @@ header {
     flex-direction: column;
     background-color: var(--cardbackground);
     border-radius: 15px;
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-.card {
-    /* transform: scale(1.1); */
+    margin-right: 50px;
+    min-width: 400px;
 }
 
 .firstcardline, .secondcardline, .thirdcardline, .iconprice {
     display: flex;
     justify-content: space-between;
 }
-
-#container4 {
-    padding-left: 40px;
-    padding-right: 40px;
-}
-
-/* div {
-    border: 2px solid black;
-} */
 
 .orange {
     color: var(--cardseries);
@@ -219,82 +215,115 @@ header {
 
 .firstcardline * {
     margin: 0; 
-    padding-top: 20px;
-    font-size: 10px;
+    padding-top: 30px;
+    font-size: 16px;
 }
 
 .secondcardline * {
     display: flex;
     align-items: center;
-    /* padding-top: 10px; */
-    font-size: 16px;
+    font-size: 26px;
+    margin: 0;
+    padding-top: 15px;
+    letter-spacing: 1px;
 }
 
 .thirdcardline * {
     margin: 0; 
-    /* padding-top: 10px; */
-    font-size: 16px;
-    padding-bottom: 10px;
+    font-size: 24px;
+    padding-top: 15px;
+    padding-bottom: 25px;
 }
 
 .iconprice {
-    padding: 0px;
-    min-width: 90px;
+    padding: 0;
+    min-width: 150px;
+}
+
+.nfticon {
+    height: 70%;
+}
+
+.container.column {
+    margin-bottom: 130px;
+}
+
+.greyborder {
+    border-top: 3px solid var(--cardbackground);
+    border-bottom: 3px solid var(--cardbackground);
+    padding-top: 65px;
+    margin: 0;
+    padding-bottom: 0;
+}
+
+.bigger {
+    font-size: 5rem;
+    line-height: 110%;
+    letter-spacing: 1px;
+}
+
+.smalltext.smallerbox {
+    max-width: 300px;
+}
+
+.greyline {
+    width: 100%;
+    height: 1px;
+    background-color: var(--cardbackground);
+    transform: scale(2.5);
 }
 
 #second_graphic {
-    height: 500px;
-    margin-top: 150px;
-    margin-left: -30px;
+    height: 650px;
+    margin-top: 155px;
+    margin-left: -100px;
+    display: flex;
+    align-content: flex-end;
 }
 
-#title3 {
-    max-width: 52vw;
-    /* border-top: 3px solid var(--cardbackground); */
-}
-
-#container5 {
-    margin-top: 40px;
-    border-top: 3px solid var(--cardbackground);
-    border-bottom: 3px solid var(--cardbackground);
-}
-
-#second_button {
-    margin-bottom: 0px;
-}
-
-footer {
-    margin-top: 40px;
-    margin-left: 40px;
-    margin-right: 40px;
-    font-family: Arial, Helvetica, sans-serif;
-    color: var(--smalltext);
-    font-size: 24px;
-}
-
-.copyright {
-    color: var(--navtextcolor);
+.bold {
+    font-weight: bold;
+    font-size: 22px;
+    padding-bottom: 5px;
 }
 
 .social i {
     margin-right: 15px;
     margin-top: 10px;
     color: var(--navtextcolor);
-    transform: scale(1.3);
 }
 
-table {
+.footer_container {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    flex: 50%;
+    margin-top: 70px;
+}
+
+.footersection {
+    flex: 50%;
+}
+
+.copyright {
+    color: var(--navtextcolor);
     margin-top: 50px;
-    margin-bottom: 50px;
-    width: 90%;
+    margin-bottom: 150px;
+    letter-spacing: 1px;
 }
 
-th {
-    padding-bottom: 20px;
-    padding-top: 20px;
-    color: var(--smalltext);
-    text-align: left;
-    font-weight: bold;
+@media screen and (min-width: 600px) {
+    #hamburger {
+        display: none;
+    }
+
+    #menu {
+        display: flex;
+    }
+
+    .greyline {
+        display: none;
+    }
 }
 
 
